--- a/dtt/geren/css/main.css
+++ b/dtt/geren/css/main.css
@@ -275,41 +275,40 @@ font-size: 52px;
 	margin-top: 20px;
 	margin-left: 10px;
 }
-progress{
+.jindu{
 	width: 50%;
 	height: 10px;
 	border-radius: 40%;
 	line-height: 45px;
-	background: #000;
+	background: #ccc;
 	margin-top: 40px;
 	float: left;
 	position: relative;
     border-radius: 10px;
 	
 }
-
-progress::-webkit-progress-bar { background:#ccc; }
-progress::-webkit-progress-value { background-color: #000; }
-.jindu1{
-	width: 90%;
-	height: 3px;
-	background: #ccc;
-	margin: 0 auto;
-	float: left;
-	margin-top: 22px;
-
-}
-.jindu2{
-	width: 80%;
-	height: 3px;
-	background: #000;
-	margin: 0 auto;
-	float: left;
+.jindu div{
+	height: 100%;
+	border-radius: 10px;
 	position: absolute;
-	top: 22px;
-	margin: auto;
+	top:0;
+	left:0;
+	background: #000;
+	width: 0%;
+	transition: all 3s;
+}
+.jindu1{
 
 }
+/*.jindu2{
+	width: 90%;
+}
+.jindu3{
+	width: 90%;
+}
+.jindu4{
+	width: 90%;
+}*/
 .baifenbi{
 	width: 18%;
 	height: 45px;
