--- a/dtt/xiaomi/css/2.css
+++ b/dtt/xiaomi/css/2.css
@@ -188,12 +188,11 @@ background-image: url('../images/sousuo.png');
 .banner aside{
 	width: 234px;
 	height: 100%;
-	background: #000;
+	background: rgba(0, 0, 0, 0.6);
 	position: absolute;
 	top: 0px;
 	bottom: 0px;
 	margin: auto;
-	opacity: 0.6;
 	z-index: 9;
 
 }
@@ -201,7 +200,7 @@ background-image: url('../images/sousuo.png');
 	margin-top: 20px;
 	width: 234px;
 }
-.banner aside ul li{
+aside ul li{
 	color: #fff;
     width: 100%;
 	line-height: 42px;
@@ -239,7 +238,7 @@ background-image: url('../images/sousuo.png');
 .right-child-nr{
 	width: 265px;
 	height: 76px;
-	padding:15px;
+	padding:20px;
 
 }
 .right-child-nr-tu{
@@ -274,9 +273,6 @@ background-image: url('../images/sousuo.png');
 	color: #ff6700;
 	text-align: center;
 	line-height: 24px;
-}
-.banner aside ul li:hover{
-	background: #ff6700;
 }
 .liebiao,.liebiao li{
 	float: left;
