--- a/dtt/xiaomi/css/2.css
+++ b/dtt/xiaomi/css/2.css
@@ -361,6 +361,8 @@ h2{
 	line-height: 58px;
 	color: #333333;
 	float: left;
+	font-weight: 200;
+	font-size: 22px;
 }
 .anniu{
 	width: 32px;
@@ -976,7 +978,7 @@ img{
 	float: left;
 }
 .reping-zi2-right{
-	width: 50px;
+	width: 60px;
 	height: 16px;
 	
 	float: right;
