--- a/dtt/xiaomi/css/2.css
+++ b/dtt/xiaomi/css/2.css
@@ -688,7 +688,7 @@ width: 234px;
 
 
 .fubiaoti{
-	font-size: 20px;
+	font-size: 16px;
 	color: #000;
 	/* float: left; */
 	text-align: center;
@@ -885,13 +885,20 @@ h4{
 .donghua-pingjia{
 	color: #ffb;
 }
-
-
+.weinituijian-box{
+	width: 4904px;
+	transition: all 1s;
+}
+.weinituijian-xiaobox{
+	width: 1226px;
+	margin: 0 auto;
+	overflow: hidden;
+}
 .weinituijian{
 	width: 1226px;
 	height: 320px;
-	
-	margin: 0 auto;
+	float:left;
+	/*margin-left:55px;*/
 }
 img{
 	width: 100%;
@@ -999,15 +1006,32 @@ img{
 
 	margin: 0 auto;
 }
+.neirong-bankuai-box{
+	width: 296px;
+	height: 420px;
+	margin-right: 14px;
+	overflow: hidden;
+	position: relative;
+	float: left;
+}
+.neirong-bankuai2-dabox{
+	width:1184px;
+	height: 420px;
+}
+.neirong-bankuai-dabox{
+	width: 888px;
+	height: 420px;
+}
+.neirong-bankuai-box:nth-child(4){
+	margin-right: 0;
+}
 .neirong-bankuai,.neirong-bankuai2,.neirong-bankuai3{
 	width: 296px;
 	height: 420px;
     position: relative;
 	background: #fff;
 	float: left;
-	margin-right: 14px;
-	
-    transition: all .6s linear;
+	transition: all .6s linear;
 
 }
 .neirong-bankuai{
@@ -1103,18 +1127,15 @@ img{
 	top: 200px;
 	left: 0px;
 	right: 0px;
-	
 	margin:  auto;
 }
 .nrbk-lunbo{
 	width: 90px;
 	height: 30px;
-	
 	position: absolute;
 	bottom: 22px;
 	left: 0px;
 	right: 0px;
-	
 	margin:  auto;
 }
 .nrbk-lunbo1{
@@ -1174,10 +1195,12 @@ img{
 	background: #bbb;
 	float: left;
 	margin-top: 186px;
-	opacity: 0;
-
-
-
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	z-index: 5;
 }
 .neirong-bankuai-jiantouyou{
 	width: 20px;
@@ -1185,9 +1208,12 @@ img{
 	background: #bbb;
 	float: right;
 	margin-top: 186px;
-	opacity: 0;
-	
-
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
+	z-index: 5;
 }
 .yanse{
 	font-size: 16px;
@@ -1216,30 +1242,6 @@ img{
 .jiage{
 	font-size: 16px;
 	color: #000;
-}
-.neirong-bankuai:hover .neirong-bankuai-jiantouyou{
-          animation: xianshi-jiantou .3s linear forwards;
-}
-.neirong-bankuai:hover .neirong-bankuai-jiantouzuo{
-          animation: xianshi-jiantou .3s linear forwards;
-}
-.neirong-bankuai1:hover .neirong-bankuai-jiantouyou{
-          animation: xianshi-jiantou .3s linear forwards;
-}
-.neirong-bankuai1:hover .neirong-bankuai-jiantouzuo{
-          animation: xianshi-jiantou .3s linear forwards;
-}
-.neirong-bankuai2:hover .neirong-bankuai-jiantouyou{
-          animation: xianshi-jiantou .3s linear forwards;
-}
-.neirong-bankuai2:hover .neirong-bankuai-jiantouzuo{
-          animation: xianshi-jiantou .3s linear forwards;
-}
-.neirong-bankuai3:hover .neirong-bankuai-jiantouyou{
-          animation: xianshi-jiantou .3s linear forwards;
-}
-.neirong-bankuai3:hover .neirong-bankuai-jiantouzuo{
-          animation: xianshi-jiantou .3s linear forwards;
 }
 
 @keyframes xianshi-jiantou{
