--- a/dtt/geren/css/main.css
+++ b/dtt/geren/css/main.css
@@ -11,7 +11,7 @@ img{
 }
 .zhezhao{
 	width: 100%;
-	height: 795px;
+	height: 100%;
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -150,6 +150,14 @@ font-size: 52px;
 	height: 100%;
 	
 }
+.works{
+	width: 100%;
+	height: 100%;
+}
+.contact{
+	width: 100%;
+	height: 100%;
+}
 .nr-biaoti{
 	width: 100%;
 	height: 147px;
@@ -167,14 +175,12 @@ font-size: 52px;
 }
 .zhuyaonr{
 	width: 85%;
-	height:100%;
-	
-   
+	height:460px;
 	margin: 0 auto;
 }
 .gerentouxiang{
 	width: 32%;
-	height: 460px;
+	height: 100%;
 	background: #A1B3A4;
 	float: left;
 }
@@ -326,8 +332,8 @@ font-size: 52px;
 }
 .zuopin{
 	width: 100%;
-	height: auto;
-	overflow: hidden;
+	height: 100%;
+	/*overflow: hidden;*/
 	margin: 0 auto;
 	/* display: flex;
 	flex-direction: row;
@@ -446,8 +452,8 @@ font-size: 52px;
 } */
 
 .zuopin1{
-	width: 33.33%;
-	height: 350px;
+	width: 100%;
+	height: 100%;
 	
 	float: left;
 	padding: 30px;
@@ -696,7 +702,7 @@ font-size: 52px;
              }
        .skilljiesao{
 			width:100%;
-			
+		    height: 460px;
          }
          
         
@@ -745,4 +751,35 @@ font-size: 52px;
 }
 .fp-controlArrow.fp-next{
 	border-color: transparent transparent transparent #ccc;
+}
+.swiper-container {
+	width: 100%;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+.swiper-slide {
+	background-position: center;
+	background-size: cover;
+	width: 300px;
+	height: 350px;
+	position: relative; transition: all 1s;
+
+}
+.next{
+    width: 30px;
+	height: 30px;
+	background: rgba(0, 0, 0, 0.6);
+	position: fixed;
+	bottom: 20px;
+	right: 0;
+	left: 0;
+	margin: auto;
+	z-index: 33;
+	border-radius: 50%;
+	font-size: 20px;
+	line-height: 30px;
+	text-align: center;
+	color: #fff;
+	transform: rotate(90deg);
+	cursor: pointer;
 }
